--- a/app/src/main/res/layout/fragment_template_list.xml
+++ b/app/src/main/res/layout/fragment_template_list.xml
@@ -3,7 +3,8 @@
                                                  xmlns:app="http://schemas.android.com/apk/res-auto"
                                                  xmlns:tools="http://schemas.android.com/tools"
                                                  android:layout_width="match_parent"
-                                                 android:layout_height="match_parent">
+                                                 android:layout_height="match_parent"
+                                                 android:background="@color/background">
     
     <FrameLayout
         android:layout_width="match_parent"
@@ -25,6 +26,14 @@
             android:id="@+id/template_list_progress"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"/>
+    
+        <TextView
+            android:id="@+id/template_list_empty"
+            android:text="@string/template_not_found"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
             android:layout_gravity="center"/>
     
     </FrameLayout>
