--- a/app/src/main/res/menu/save_category.xml
+++ b/app/src/main/res/menu/save_category.xml
@@ -4,7 +4,7 @@
     
     <item
         android:id="@+id/save_changes"
-        android:icon="@drawable/ic_check_white"
+        android:icon="@drawable/ic_check"
         android:title="@string/save_changes"
         app:showAsAction="always"/>
 
