--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,10 @@
     <color name="icon_grey">#757575</color>
     <color name="icon_white">#ffffff</color>
     <color name="icon_black">#000000</color>
+    <color name="status_bar">#202124</color>
+    
+    <color name="white">#ffffff</color>
+    <color name="green_main">#009688</color>
     
     <color name="base_category_background">#F5F5F5</color>
     
