--- a/app/src/main/res/layout/fragment_transaction_list.xml
+++ b/app/src/main/res/layout/fragment_transaction_list.xml
@@ -6,79 +6,50 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior">
-        
-        <android.support.v4.widget.NestedScrollView
-            android:id="@+id/transaction_list_content"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:visibility="gone"
-            tools:visibility="visible">
-            
-            <LinearLayout
-                android:id="@+id/content"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
-                
-                <include layout="@layout/view_transaction_list_header"/>
-                
-                <TextView
-                    style="@style/Text.ListItem.Secondary"
-                    android:text="@string/last_transaction"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginEnd="16dp"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginBottom="8dp"/>
-                
-                <android.support.v7.widget.RecyclerView
-                    android:id="@+id/transition_list"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@color/background"
-                    app:layoutManager="android.support.v7.widget.LinearLayoutManager"
-                    tools:listitem="@layout/list_item_transaction"/>
-            
-            </LinearLayout>
-        
-        </android.support.v4.widget.NestedScrollView>
-        
-        <ProgressBar
-            android:id="@+id/transaction_list_progress"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"/>
-    
-        <TextView
-            android:id="@+id/transaction_list_empty"
-            android:text="@string/transaction_empty"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:visibility="gone"
-            android:layout_gravity="center"/>
-    
-    </FrameLayout>
-    
-    <android.support.design.bottomappbar.BottomAppBar
-        android:id="@+id/bottom_bar"
-        style="@style/Widget.MaterialComponents.BottomAppBar.Colored"
+    <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
-        android:elevation="16dp"
-        app:hideOnScroll="true"
-        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-        app:navigationIcon="@drawable/ic_menu"/>
+        android:background="@color/white"
+        android:elevation="0dp">
+        
+        <include
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            layout="@layout/view_transaction_list_header"
+            app:layout_scrollFlags="scroll|enterAlways"/>
+    
+    </android.support.design.widget.AppBarLayout>
+    
+    
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/transition_list"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/background"
+        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        tools:listitem="@layout/list_item_transaction"/>
+    
+    <ProgressBar
+        android:id="@+id/transaction_list_progress"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"/>
+    
+    <TextView
+        android:id="@+id/transaction_list_empty"
+        android:text="@string/transaction_empty"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        android:layout_gravity="center"/>
     
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/add_transaction_fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_plus"
-        app:layout_anchor="@id/bottom_bar"/>
+        android:layout_margin="16dp"
+        android:layout_gravity="bottom|end"/>
 
 </android.support.design.widget.CoordinatorLayout>
