--- a/app/src/main/res/layout/header_item_transaction_day_summary.xml
+++ b/app/src/main/res/layout/header_item_transaction_day_summary.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:background="@color/white"
     style="@style/Layout.ListItem.StickyHeader">
     
     <TextView
