--- a/app/src/main/res/layout/fragment_add_edit_category.xml
+++ b/app/src/main/res/layout/fragment_add_edit_category.xml
@@ -93,6 +93,15 @@
             <include
                 android:id="@+id/icon_selector_field"
                 layout="@layout/view_category_icon_item"/>
+    
+            <android.support.design.button.MaterialButton
+                android:id="@+id/category_save_changes_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end"
+                android:layout_marginEnd="16dp"
+                android:layout_marginBottom="16dp"
+                android:text="@string/save"/>
         
         </LinearLayout>
     
