--- a/app/src/main/res/layout/fragment_add_edit_transaction.xml
+++ b/app/src/main/res/layout/fragment_add_edit_transaction.xml
@@ -157,6 +157,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="end"
                 android:layout_marginEnd="16dp"
+                android:layout_marginBottom="16dp"
                 android:text="@string/save"/>
         
         </LinearLayout>
