--- a/app/src/main/res/drawable/ic_analytics.xml
+++ b/app/src/main/res/drawable/ic_analytics.xml
@@ -1,9 +1,9 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-        android:width="24dp"
-        android:height="24dp"
         android:viewportWidth="24"
-        android:viewportHeight="24">
+        android:viewportHeight="24"
+        android:width="24dp"
+        android:height="24dp">
     <path
-        android:fillColor="@color/icon_grey"
-        android:pathData="M12 20c1.1 0 2 -0.9 2 -2L14 6C14 4.9 13.1 4 12 4 10.9 4 10 4.9 10 6l0 12c0 1.1 0.9 2 2 2zm-6 0c1.1 0 2 -0.9 2 -2L8 14C8 12.9 7.1 12 6 12 4.9 12 4 12.9 4 14l0 4c0 1.1 0.9 2 2 2zm10 -9l0 7c0 1.1 0.9 2 2 2 1.1 0 2 -0.9 2 -2l0 -7C20 9.9 19.1 9 18 9 16.9 9 16 9.9 16 11Z" />
+        android:pathData="M23 8c0 1.1 -0.9 2 -2 2 -0.18 0 -0.35 -0.02 -0.51 -0.07l-3.56 3.55C16.98 13.64 17 13.82 17 14c0 1.1 -0.9 2 -2 2 -1.1 0 -2 -0.9 -2 -2 0 -0.18 0.02 -0.36 0.07 -0.52L10.52 10.93C10.36 10.98 10.18 11 10 11 9.82 11 9.64 10.98 9.48 10.93L4.93 15.49C4.98 15.65 5 15.82 5 16 5 17.1 4.1 18 3 18 1.9 18 1 17.1 1 16c0 -1.1 0.9 -2 2 -2 0.18 0 0.35 0.02 0.51 0.07L8.07 9.52C8.02 9.36 8 9.18 8 9 8 7.9 8.9 7 10 7c1.1 0 2 0.9 2 2 0 0.18 -0.02 0.36 -0.07 0.52l2.55 2.55C14.64 12.02 14.82 12 15 12c0.18 0 0.36 0.02 0.52 0.07L19.07 8.51C19.02 8.35 19 8.18 19 8c0 -1.1 0.9 -2 2 -2 1.1 0 2 0.9 2 2zm0 0c0 1.1 -0.9 2 -2 2 -0.18 0 -0.35 -0.02 -0.51 -0.07l-3.56 3.55C16.98 13.64 17 13.82 17 14c0 1.1 -0.9 2 -2 2 -1.1 0 -2 -0.9 -2 -2 0 -0.18 0.02 -0.36 0.07 -0.52L10.52 10.93C10.36 10.98 10.18 11 10 11 9.82 11 9.64 10.98 9.48 10.93L4.93 15.49C4.98 15.65 5 15.82 5 16 5 17.1 4.1 18 3 18 1.9 18 1 17.1 1 16c0 -1.1 0.9 -2 2 -2 0.18 0 0.35 0.02 0.51 0.07L8.07 9.52C8.02 9.36 8 9.18 8 9 8 7.9 8.9 7 10 7c1.1 0 2 0.9 2 2 0 0.18 -0.02 0.36 -0.07 0.52l2.55 2.55C14.64 12.02 14.82 12 15 12c0.18 0 0.36 0.02 0.52 0.07L19.07 8.51C19.02 8.35 19 8.18 19 8c0 -1.1 0.9 -2 2 -2 1.1 0 2 0.9 2 2z"
+        android:fillColor="@color/icon_grey"/>
 </vector>
