[busness-logic] [db-scheme] [di]
* add Account table, dao, repository, implement di for it

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,7 +12,7 @@
     <color name="status_bar">#202124</color>
     
     <color name="white">#ffffff</color>
-    <color name="green_main">#009688</color>
+    <color name="green_main">#43A047</color>
     
     <color name="base_category_background">#F5F5F5</color>
     
