--- a/app/src/main/res/values-v23/colors.xml
+++ b/app/src/main/res/values-v23/colors.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="status_bar">@color/white</color>
+    <color name="status_bar">@color/background</color>
 </resources>
