--- a/app/src/main/res/layout/view_transaction_list_header.xml
+++ b/app/src/main/res/layout/view_transaction_list_header.xml
@@ -42,6 +42,14 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/total_balance_title"
                 app:layout_constraintEnd_toEndOf="parent"/>
+            
+            <lecho.lib.hellocharts.view.LineChartView
+                android:id="@+id/chart"
+                android:layout_width="0dp"
+                android:layout_height="50dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/total_balance_value"/>
         
         
         </android.support.constraint.ConstraintLayout>
